--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 * {
-font-family: "Inter", sans-serif;
+font-family: "Bebas Neue", system-ui;
 transition: all 0.3s ease;
 }
 
