--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ fieldset{
     border-radius: 6px;
     border-color: white;
     font-weight: 600;
-    color: black;
+    color: white;
 }
 
 p {
